# digodoc-index-api

./: Makefile  Makefile.config  README.md  digodoc-index-api.opam  dune-project
config/: api_config.json  info.json
docs/: index.html
docs/digodoc-index-api/: index.html
docs/digodoc-index-api/Api/: index.html
docs/digodoc-index-api/Api/MakeRegisterer/: index.html
docs/digodoc-index-api/Api/MakeRegisterer/argument-1-S/: index.html
docs/digodoc-index-api/Api/MakeRegisterer/argument-2-H/: index.html
docs/digodoc-index-api/Api/R/: index.html
docs/digodoc-index-api/Data_types/: index.html
docs/digodoc-index-api/Db/: index.html
docs/digodoc-index-api/Db/Generate/: index.html
docs/digodoc-index-api/Db_lwt/: index.html
docs/digodoc-index-api/Db_lwt/PGOCaml/: index.html
docs/digodoc-index-api/Encoding/: index.html
docs/digodoc-index-api/Handlers/: index.html
docs/digodoc-index-api/Index/: index.html
docs/digodoc-index-api/Misc/: index.html
docs/digodoc-index-api/Monad_lwt/: index.html
docs/digodoc-index-api/PConfig/: index.html
docs/digodoc-index-api/Services/: index.html
docs/digodoc-index-api/Versions/: index.html
scripts/: api.service  digodoc_index.service
src/: dune
src/api/: api.ml  api_server.ml  dune  encoding.ml  handlers.ml  index.ml  services.ml
src/common/: build.ocp2  data_types.ml  dune
src/db/: build.ocp2  db.ml  dune  versions.ml
src/db/db-update/: dune
www/: openapi.json
