(library
 (name api_services)
 (public_name digodoc-index-api.services)
 (wrapped false)
 (modules encoding services)
 (preprocess (pps ppx_deriving_encoding))
 (libraries ez_api data_common))

(library
 (name api_lib)
 (wrapped false)
 (modules handlers api)
 (libraries ez_api.server api_services db indexer))

(library
 (name indexer)
 (wrapped false)
 (modules index)
 (libraries ez_file data_common db)
 (preprocess (pps pgocaml_ppx lwt_ppx)))

(executable
 (name api_server)
 (modules api_server)
 (libraries api_lib indexer)
 (preprocess (pps pgocaml_ppx lwt_ppx)))

(executable
 (name openapi)
 (modules openapi)
 (libraries api_lib ez_api.openAPI))
